2006-01-25  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/Avatar.cpp: set the walking speed to 2.5 meters per second, to fit with cyphesis
    * src/components/ogre/AvatarEmberEntity.h: removed reference to PersonEmberEntity
    * src/components/ogre/ConsoleObjectImpl.*, src/components/ogre/EmberOgre.cpp: use the Singleton baseclass
    * src/components/ogre/EmberEntity.*, src/components/ogre/WorldEmberEntity.cpp: no need to hold a reference to the SceneManager since it's available through the SceneNode
    * src/components/ogre/EmberEntityFactory.*: the creation of PhysicalEntityEntity and AvatarEmberEntity shouldn't be so different

2006-01-24  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.cpp, src/components/ogre/GUIManager.cpp,  src/components/ogre/TerrainPage.cpp, src/components/ogre/carpenter/BluePrint.cpp, src/components/ogre/environment/Foliage.cpp,  src/components/ogre/environment/FoliageArea.cpp,  src/components/ogre/model/Model.cpp,  src/components/ogre/model/XMLModelDefinitionSerializer.cpp,  src/components/ogre/widgets/IconBase.cpp,  src/components/ogre/widgets/IngameChatWidget.cpp,  src/components/ogre/widgets/MeshPreview.cpp,  src/services/server/ServerService.cpp: catch exceptions as const
    * src/services/scripting/ScriptingService.cpp: better error output

2006-01-24  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/ogre/required.h: added some needed defintions of basic types that msvc didn't get
    * src/services/scripting/ScriptingService.cpp: added missing return value
    * src/components/ogre/model/XMLModelDefinitionSerializer.cpp: modified for win32, make sure the directory where the modeldefinitions are stored really exists

2006-01-24  Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp: adapt paths so they will work better on win32
    * ember.conf: fixed the name of "logginglevel" (not "loggingmode")